chore(deps): add gomod for each service and api
- add gomod for bugu service
- add gomod for bugu api
- add gomod for bugu pkg
- modified the confusion api to transfer additional `fileId` and `method` fields
- fix the protobuf index check error on obfusion service
