# api/bugu/service/v1/bugu.swagger.json
@@ -246,6 +246,12 @@
       "properties": {
         "artifactId": {
           "type": "string"
+        },
+        "fileId": {
+          "type": "string"
+        },
+        "method": {
+          "type": "string"
         }
       }
     },
